src/objects/KS_No_codificado__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto para registrar todas las referencias de No Codificados</description>
    <fields>
        <fullName>KS_Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Cableado_o_Kit__c</fullName>
        <label>Cableado o Kit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Cableado_o_Kit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Cliente__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>No codificados</relationshipLabel>
        <relationshipName>No_codificados</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_Comentarios__c</fullName>
        <label>Comentarios</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_Etapa__c</fullName>
        <label>Etapa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Etapa_No_codificados</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Nombre_No_Codificado__c</fullName>
        <label>Nombre No Codificado</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KS_Num_de_lineas_electricas__c</fullName>
        <label>Num. de líneas eléctricas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Num_lineas_el_ctricas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>No codificados</relationshipLabel>
        <relationshipName>No_codificados</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_Plazo_de_entrega__c</fullName>
        <inlineHelpText>Plazo de entrega a partir de la recepción del pedido</inlineHelpText>
        <label>Plazo de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Plazo_de_entrega_solicitud__c</fullName>
        <inlineHelpText>Solicitud de plazo de entrega</inlineHelpText>
        <label>Plazo de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Precio_Total__c</fullName>
        <formula>KS_Total__c + 
IF(TEXT(KS_Cableado_o_Kit__c)=&apos;Cableado&apos;,(((VALUE(TEXT(KS_Num_de_lineas_electricas__c ))-1))*KS_Total__c*0.1)+KS_Total__c*0.3,
    IF(TEXT(KS_Cableado_o_Kit__c)=&apos;Kit&apos;,KS_Total__c*0.2,0))
+ KS_Sobrecoste_Modulos__c</formula>
        <label>Precio Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Precio_muestra__c</fullName>
        <label>Precio muestra</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Precio_pieza__c</fullName>
        <label>Precio pieza</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Prevision_unidades_de_venta__c</fullName>
        <inlineHelpText>Cantidad prevista de venta</inlineHelpText>
        <label>Previsión unidades de venta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Sobrecoste_Modulos__c</fullName>
        <label>Sobrecoste Modulos</label>
        <summarizedField>KS_Componentes__c.KS_Sobrecoste_Modulos__c</summarizedField>
        <summaryForeignKey>KS_Componentes__c.KS_No_codificado__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Total__c</fullName>
        <label>Total</label>
        <summarizedField>KS_Componentes__c.KS_PVR_Total__c</summarizedField>
        <summaryForeignKey>KS_Componentes__c.KS_No_codificado__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>No codificado</label>
    <nameField>
        <displayFormat>NCSF-{000000}</displayFormat>
        <label>ID No codificado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>No codificados</pluralLabel>
    <recordTypes>
        <fullName>KS_D1</fullName>
        <active>true</active>
        <description>No codificados tipo D1</description>
        <label>D1</label>
    </recordTypes>
    <recordTypes>
        <fullName>KS_D2</fullName>
        <active>true</active>
        <description>No Codificado tipo D2</description>
        <label>D2</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>